--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ dependencies = [
     "quart~=0.20.0",
     "quart-trio~=0.12.0",
     "quart-auth~=0.11.0",
-    "trio~=0.31.0",
+    "trio~=0.32.0",
     "Werkzeug~=3.1.3",
     'exceptiongroup >= 1.2.0; python_version < "3.11"',
     'tomli >= 2.0.1; python_version < "3.11"',
@@ -63,7 +63,8 @@ tests = [
 tools = [
     "ruff>=0.9.2",
     "codespell>=2.3.0",
-    "mypy>=1.14.1",
+    "mypy>=1.18.1",
+    "pre-commit>=4.2.0",
 ]
 
 [tool.setuptools.package-data]
